k8s/client-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-client
  namespace: devopsplayground
  labels:
    app: devops-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-client
  template:
    metadata:
      labels:
        app: devops-client
    spec:
      containers:
      - name: client
        image: priyanshuvatsyan/devops-client:495e4ce
        ports:
        - containerPort: 5173 # <-- Updated to match your container
        resources:
          requests:
            cpu: "50m"      # Baseline: 5% of a core
            memory: "64Mi"
          limits:
            cpu: "250m"     # Max limit: 25% of a core
            memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: devops-client-svc
  namespace: devopsplayground
spec:
  selector:
    app: devops-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173 # <-- Routes incoming HTTP traffic to 5173
  type: ClusterIP
