k8s/server-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-server
  namespace: devopsplayground
  labels:
    app: devops-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-server
  template:
    metadata:
      labels:
        app: devops-server
    spec:
      serviceAccountName: default 
      containers:
      - name: server
        image: priyanshuvatsyan/devops-server:495e4ce
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"     # Baseline: 10% of a core
            memory: "128Mi"
          limits:
            cpu: "500m"     # Max limit: 50% of a core
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: devops-server-svc
  namespace: devopsplayground
spec:
  selector:
    app: devops-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
