k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-playground-ingress
  namespace: devopsplayground
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devops.priyanshus.duckdns.org
    secretName: devops-playground-tls 
  rules:
  - host: devops.priyanshus.duckdns.org 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: devops-server-svc
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-client-svc
            port:
              number: 80
